# josdirs

./: .gitignore  README.md  build.gradle.kts  install-mingw-dual.ps1  settings.gradle.kts
.github/workflows/: core.yml  gradle.yml  natives-macos.yml  natives-unix.yml  natives-windows.yml  platform-macos.yml  platform-unix.yml  platform-windows.yml
api/: build.gradle.kts
api/src/main/java/io/github/wasabithumb/josdirs/: OSDirs.java
api/src/main/java/io/github/wasabithumb/josdirs/path/: OSPath.java
gradle/wrapper/: gradle-wrapper.properties
internals/: build.gradle.kts
internals/src/main/java/io/github/wasabithumb/josdirs/: AbstractOSDirs.java
internals/src/main/java/io/github/wasabithumb/josdirs/loader/: JARLibraryLoader.java  LibraryLoader.java
internals/src/main/java/io/github/wasabithumb/josdirs/path/: AbstractOSPath.java  BasicOSPath.java
internals/src/main/java/io/github/wasabithumb/josdirs/platform/: OSDirsService.java
internals/src/main/java/io/github/wasabithumb/josdirs/util/: IOUtil.java  (+2 more)
platform/all/: build.gradle.kts
platform/macos/: build.gradle.kts
platform/unix/: build.gradle.kts
platform/unix/natives/: Cargo.toml  build.gradle.kts
platform/unix/natives/.cargo/: config.toml
platform/unix/natives/src/: lib.rs
platform/windows/: build.gradle.kts
platform/windows/natives/: Cargo.toml  build.gradle.kts
platform/windows/natives/.cargo/: config.toml
platform/windows/natives/src/: lib.rs
src/main/java/io/github/wasabithumb/josdirs/: JOSDirs.java
src/test/java/io/github/wasabithumb/josdirs/: JOSDirsTest.java
(+10 files in other folders)
