[package]
name = "josdirs-natives-windows"
version = "0.1.0"
edition = "2021"
authors = ["WasabiThumb"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
jni = "0.21.1"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com"
]
